grammar.js
    compilation_unit: $ =>
      seq(
        optional($._shebang),
        $._scanner_start,
        optional(trailingSep1($._semicolon, $._top_level_definition)),
      ),

    _top_level_definition: $ =>
      choice(
        $.package_clause,
        $.package_object,
        $._definition,
        $._end_marker,
        $.expression,
      ),

    object_definition: $ =>
      seq(
        repeat($.annotation),
        optional($.modifiers),
        optional("case"),
        "object",
        $._object_definition,
      ),

    _object_definition: $ =>
      prec.left(
        seq(
          field("name", $._identifier),
          field("extend", optional($.extends_clause)),
          field("derive", optional($.derives_clause)),
          field("body", optional($._definition_body)),
        ),
      ),

    class_definition: $ =>
      seq(
        repeat($.annotation),
        optional($.modifiers),
        optional("case"),
        "class",
        $._class_definition,
      ),

    _class_definition: $ =>
      seq(
        $._class_constructor,
        field("extend", optional($.extends_clause)),
        field("derive", optional($.derives_clause)),
        optional($._automatic_semicolon),
        field("body", optional($._definition_body)),
      ),

    type_parameters: $ =>
      seq(
        $._open_brack,
        trailingSep1(",", $._variant_type_parameter),
        $._close_brack,
      ),

    _variant_type_parameter: $ =>
      seq(
        repeat($.annotation),
        choice(
          $.covariant_type_parameter,
          $.contravariant_type_parameter,
          $._type_parameter, // invariant type parameter
          $.type_lambda,
        ),
      ),

    context_bound: $ =>
      seq(
        field("type", $._type),
        optional(seq("as", field("name", $._identifier))),
      ),

    /*
     * TemplateBody      ::=  :<<< [SelfType] TemplateStat {semi TemplateStat} >>>
     */
    template_body: $ =>
      choice($._indented_template_body, $._braced_template_body),

    _indented_template_body: $ =>
      prec.left(
        PREC.control,
        seq(
          ":",
          $._indent,
          optional($.self_type),
          $._block,
          $._outdent,
          optional($._end_marker),
        ),
      ),

    _braced_template_body: $ =>
      prec.left(
        PREC.control,
        seq(
          $._open_brace,
          optional(choice($._braced_template_body1, $._braced_template_body2)),
          $._close_brace,
        ),
      ),

    _end_marker: $ =>
      prec.left(
        "end",
        seq(
          "end",
          choice(
            "if",
            "while",
            "for",
            "match",
            "try",
            "new",
            "this",
            "given",
            "extension",
            "val",
            alias($._identifier, "_end_ident"),
          ),
        ),
      ),

    // Dynamic precedences added here to win over $.call_expression
    annotation: $ =>
      seq(
        "@",
        field("name", $._simple_type),
        field("arguments", choice(repeat(prec.dynamic(-4, $.arguments)))),
      ),

    val_definition: $ =>
      seq(
        $._start_val,
        field("pattern", choice($._pattern, $.identifiers)),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._indentable_expression),
      ),

    _start_val: $ => seq(repeat($.annotation), optional($.modifiers), "val"),

    var_definition: $ =>
      seq(
        $._start_var,
        field("pattern", choice($._pattern, $.identifiers)),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._indentable_expression),
      ),

    _start_var: $ => seq(repeat($.annotation), optional($.modifiers), "var"),

    function_definition: $ =>
      seq(
        $._function_declaration,
        choice(
          seq("=", field("body", $._indentable_expression)),
          field("body", $.block),
        ),
      ),

    _function_declaration: $ =>
      prec.left(
        seq(
          repeat($.annotation),
          optional($.modifiers),
          "def",
          $._function_constructor,
          optional(seq(":", field("return_type", $._type))),
        ),
      ),

    // Created for memory-usage optimization during codegen.
    _constructor_application: $ =>
      prec.left(
        PREC.constructor_app,
        choice(
          $._annotated_type,
          $.compound_type,
          // In theory structural_type should just be added to simple_type,
          // but doing so increases the state of template_body to 4000
          $._structural_type,
          // This adds _simple_type, but not the above intentionall/y.
          seq($._simple_type, field("arguments", $.arguments)),
          seq($._annotated_type, field("arguments", $.arguments)),
          seq($.compound_type, field("arguments", $.arguments)),
        ),
      ),

    modifiers: $ =>
      prec.left(
        repeat1(
          prec.left(
            choice(
              "abstract",
              "final",
              "sealed",
              "implicit",
              "lazy",
              "override",
              $.access_modifier,
              $.inline_modifier,
              $.infix_modifier,
              $.open_modifier,
              $.transparent_modifier,
            ),
          ),
        ),
      ),

    inline_modifier: $ => prec("mod", "inline"),
    parameters: $ =>
      choice(
        seq(
          $._open_paren,
          optional("implicit"),
          trailingSep(",", $.parameter),
          $._close_paren,
        ),
        $._using_parameters_clause,
      ),

    /*
     * UsingParamClause  ::=  [nl] ‘(’ ‘using’ (DefParams | FunArgTypes) ‘)’
     * DefParams         ::=  DefParam {‘,’ DefParam}
     * FunArgTypes       ::=  FunArgType { ‘,’ FunArgType }
     */
    _using_parameters_clause: $ =>
      seq(
        $._open_paren,
        "using",
        choice(
          trailingSep1(",", $.parameter),
          trailingSep1(",", $._param_type),
        ),
        $._close_paren,
      ),

    parameter: $ =>
      prec.left(
        PREC.control,
        seq(
          repeat($.annotation),
          optional($.inline_modifier),
          field("name", $._identifier),
          ":",
          field("type", $._param_type),
          optional(seq("=", field("default_value", $.expression))),
        ),
      ),

    /*
     * NameAndType       ::=  id ':' Type
     */
    _block: $ =>
      seq(
        trailingSep1(
          $._semicolon,
          choice($._definition, $.expression, $._end_marker, ";"),
        ),
      ),

    _indentable_expression: $ =>
      prec.right(choice($.indented_block, $.indented_cases, $.expression)),

    block: $ => seq($._open_brace, optional($._block), $._close_brace),

    indented_block: $ =>
      prec.left(
        PREC.control,
        seq($._indent, $._block, $._outdent, optional($._end_marker)),
      ),

    indented_cases: $ =>
      prec.left(seq($._indent, repeat1($.case_clause), $._outdent)),

    _type: $ =>
      choice(
        $.function_type,
        $.compound_type,
        $.infix_type,
        $.match_type,
        $._annotated_type,
        $.literal_type,
        $._structural_type,
        $.type_lambda,
      ),

    _simple_type: $ =>
      prec.dynamic(
        PREC.type,
        choice(
          $.generic_type,
          $.projected_type,
          $.tuple_type,
          $.named_tuple_type,
          $.singleton_type,
          $.stable_type_identifier,
          $._type_identifier,
          $.wildcard,
        ),
      ),

    generic_type: $ =>
      seq(
        field("type", $._simple_type),
        field("type_arguments", $.type_arguments),
      ),

    _param_type: $ =>
      choice($._type, $.lazy_parameter_type, $.repeated_parameter_type),

    repeated_parameter_type: $ =>
      prec.left(PREC.postfix, seq(field("type", $._type), "*")),

    _type_identifier: $ => alias($._identifier, $.type_identifier),

    _pattern: $ =>
      choice(
        $._identifier,
        $.stable_identifier,
        $.interpolated_string_expression,
        $.capture_pattern,
        $.tuple_pattern,
        $.named_tuple_pattern,
        $.case_class_pattern,
        $.infix_pattern,
        $.alternative_pattern,
        $.typed_pattern,
        $.given_pattern,
        $.quote_expression,
        $.literal,
        $.wildcard,
        $.repeat_pattern,
      ),

    case_class_pattern: $ =>
      seq(
        field("type", choice($._type_identifier, $.stable_type_identifier)),
        $._open_paren,
        choice(
          field("pattern", trailingSep(",", $._pattern)),
          field("pattern", trailingSep(",", $.named_pattern)),
        ),
        $._close_paren,
      ),

    typed_pattern: $ =>
      prec.right(
        -1,
        seq(field("pattern", $._pattern), ":", field("type", $._type)),
      ),

    tuple_pattern: $ =>
      seq($._open_paren, trailingSep1(",", $._pattern), $._close_paren),

    _simple_expression: $ =>
      choice(
        $.identifier,
        $.operator_identifier,
        $.literal,
        $.interpolated_string_expression,
        $.unit,
        $.tuple_expression,
        $.wildcard,
        $.block,
        $.splice_expression,
        $.case_block,
        $.quote_expression,
        $.instance_expression,
        $.parenthesized_expression,
        $.field_expression,
        $.match_expression,
        $.generic_function,
        $.call_expression,
        alias($.colon_call_expression, $.call_expression),
      ),

    lambda_expression: $ =>
      prec.dynamic(
        PREC.control,
        seq(
          optional(seq(field("type_parameters", $.type_parameters), "=>")),
          field(
            "parameters",
            choice(
              $.bindings,
              seq(optional("implicit"), $._identifier),
              $.wildcard,
            ),
          ),
          choice("=>", "?=>"),
          $._indentable_expression,
        ),
      ),

    /*
     *  ::=  [‘inline’] ‘if’ ‘(’ Expr ‘)’ {nl} Expr [[semi] ‘else’ Expr]
     *    |  [‘inline’] ‘if’  Expr ‘then’ Expr [[semi] ‘else’ Expr]
     */
    if_expression: $ =>
      seq(
        optional($.inline_modifier),
        "if",
        field("condition", $._if_condition),
        field("consequence", $._indentable_expression),
        optional(
          seq(
            optional(";"),
            "else",
            field("alternative", $._indentable_expression),
          ),
        ),
      ),

    // NOTE(susliko): _if_condition and its magic dynamic precedence were introduced as a fix to
    // https://github.com/tree-sitter/tree-sitter-scala/issues/263 and
    // https://github.com/tree-sitter/tree-sitter-scala/issues/342
    // Neither do I understand why this works, nor have I found a better solution
    _if_condition: $ =>
      prec.dynamic(
        4,
        choice(
          $.parenthesized_expression,
          seq($._indentable_expression, "then"),
        ),
      ),

    /*
     *   MatchClause       ::=  'match' <<< CaseClauses >>>
     */
    match_expression: $ =>
      prec.dynamic(
        PREC.match,
        seq(
          optional($.inline_modifier),
          field("value", choice($.expression, $._simple_expression)),
          optional("."),
          $.match_clause,
        ),
      ),

    try_expression: $ =>
      prec.right(
        PREC.control,
        seq(
          "try",
          field("body", $._indentable_expression),
          optional($.catch_clause),
          optional($.finally_clause),
        ),
      ),

    /*
     *   Catches           ::=  'catch' (Expr | ExprCaseClause)
     */
    catch_clause: $ =>
      prec.right(
        seq("catch", choice($._indentable_expression, $._expr_case_clause)),
      ),

    _expr_case_clause: $ =>
      prec.left(
        seq("case", $._case_pattern, field("body", $._indentable_expression)),
      ),

    finally_clause: $ => prec.right(seq("finally", $._indentable_expression)),

    /*
     * Binding           ::=  (id | ‘_’) [‘:’ Type]
     */
    binding: $ =>
      prec.dynamic(
        PREC.binding,
        seq(
          choice(field("name", $._identifier), $.wildcard),
          optional(seq(":", field("type", $._param_type))),
        ),
      ),

    bindings: $ =>
      prec.dynamic(
        PREC.binding,
        seq($._open_paren, trailingSep(",", $.binding), $._close_paren),
      ),

    case_block: $ =>
      choice(
        prec(-1, seq($._open_brace, $._close_brace)),
        seq($._open_brace, repeat1($.case_clause), $._close_brace),
      ),

    case_clause: $ =>
      prec.left(
        seq(
          "case",
          $._case_pattern,
          field("body", optional(choice($._block, $.indented_block))),
        ),
      ),

    // This is created to capture guard from the right
    _case_pattern: $ =>
      prec.dynamic(
        10,
        seq(field("pattern", $._pattern), optional($.guard), "=>"),
      ),

    guard: $ =>
      prec.left(
        PREC.control,
        seq(
          "if",
          field(
            "condition",
            choice(
              $.postfix_expression,
              $.infix_expression,
              $.prefix_expression,
              $._simple_expression,
            ),
          ),
        ),
      ),

    assignment_expression: $ =>
      prec.right(
        PREC.assign,
        seq(
          field("left", choice($.prefix_expression, $._simple_expression)),
          "=",
          field("right", $._indentable_expression),
        ),
      ),

    generic_function: $ =>
      prec.dynamic(
        PREC.call,
        seq(
          field("function", $.expression),
          field("type_arguments", $.type_arguments),
        ),
      ),

    call_expression: $ =>
      prec.dynamic(
        PREC.call,
        seq(
          field("function", $._simple_expression),
          field("arguments", choice($.arguments, $.case_block, $.block)),
        ),
      ),

    colon_argument: $ =>
      prec.dynamic(
        PREC.colon_call,
        seq(
          optional(field("lambda_start", $._lambda_start)),
          choice($.indented_block, $.indented_cases),
        ),
      ),

    _lambda_start: $ =>
      prec.dynamic(
        PREC.colon_call,
        seq(choice($.bindings, $._identifier, $.wildcard), choice("=>", "?=>")),
      ),

    field_expression: $ =>
      prec.dynamic(
        PREC.field,
        seq(
          field("value", $._simple_expression),
          ".",
          field("field", $._identifier),
        ),
      ),

    /**
     *   SimpleExpr        ::=  SimpleRef
     *                      |  'new' ConstrApp {'with' ConstrApp} [TemplateBody]
     *                      |  'new' TemplateBody
     */
    instance_expression: $ =>
      choice(
        // This is weakened so ascription wins for new Array: Array
        prec.dynamic(
          0,
          seq("new", $._constructor_application, $.template_body),
        ),
        prec("new", seq("new", $.template_body)),
        seq("new", $._constructor_application),
      ),

    /**
     * PostfixExpr [Ascription]
     */
    ascription_expression: $ =>
      prec.dynamic(
        PREC.ascription,
        seq(
          choice(
            $.postfix_expression,
            $.infix_expression,
            $.prefix_expression,
            $._simple_expression,
          ),
          optional($._automatic_semicolon),
          ":",
          choice($._param_type, $.annotation),
        ),
      ),

    postfix_expression: $ =>
      prec.dynamic(
        PREC.postfix,
        seq(
          choice($.infix_expression, $.prefix_expression, $._simple_expression),
          $._identifier,
        ),
      ),

    prefix_expression: $ =>
      prec.dynamic(
        PREC.prefix,
        seq(choice("+", "-", "!", "~"), $._simple_expression),
      ),

    _exprs_in_parens: $ => trailingSep1(",", $.expression),
